<resources>
    <string name="app_name">AppClienteVIP</string>
    <string name="text_titulo">Aplicativo Lista VIP Curso Android</string>
    <string name="text_hint_primeiro_nome">Primeiro Nome</string>
    <string name="text_hint_sobrenome">Sobrenome</string>
    <string name="text_hint_curso">Nome do Curso Desejado</string>
    <string name="text_hint_telefone">Telefone de Contato</string>
    <string name="text_button_limpar">Limpar</string>
    <string name="text_button_salvar">Salvar</string>
    <string name="text_button_finalizar">Finalizar</string>
    <string name="text_selecione_um_curso">Selecione um Curso...</string>
    <string name="textview_titulo_splash">App Lista VIP</string>
</resources>